[package]
name = "mathie"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
num-traits = "0.2.15"
euclid = { version = "0.22.7", optional = true }
[features]
debug_unit_check = []

metric_units = []
imperial_units = []
nautical_units = []

euclid_compat = ["euclid"]


