[package]
name = "mathie"
version = "0.0.3"
edition = "2021"
license = "MIT / Apache-2.0"
readme = "README.md"

description = "A rust math type library."
keywords = ["geometry", "math", "library"]

repository = "https://github.com/alphaqu/mathie"
homepage = "https://github.com/alphaqu/mathie"
authors = ["notequalalpha"]
exclude = [
    ".idea/*",
]

[dependencies]
num-traits = "0.2.15"
euclid = { version = "0.22.7", optional = true }

[features]
debug_unit_check = []

metric_units = []
imperial_units = []
nautical_units = []

euclid_compat = ["euclid"]


