[package]
name = "mathie"
version = "0.6.0"
edition = "2021"
license = "MIT / Apache-2.0"
readme = "README.md"

description = "A rust math type library."
keywords = ["geometry", "math", "library"]

repository = "https://github.com/alphaqu/mathie"
homepage = "https://github.com/alphaqu/mathie"
authors = ["notequalalpha"]
exclude = [
    ".idea/*",
]

[dependencies]
num-traits = "0.2"
euclid = { version = "0.22", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }

[features]
euclid_compat = ["euclid"]
serde = ["dep:serde"]

